# algorithms

./: CMakeLists.txt  vcpkg.json
cmake/: compiler.cmake
include/nkgt/algorithms/: sorting.hpp
src/: sorting.cpp
test/: CMakeLists.txt  sorting.cpp
